# limxsdk-for-lowlevel

./: CMakeLists.txt  README.md  package.xml
examples/: CMakeLists.txt  pf_controller_base.cpp  pf_controller_base.h  pf_groupJoints_move.cpp  pf_joint_move.cpp  pointfoot_example.cpp  wl_controller_base.cpp  wl_controller_base.h  wl_sitdown.cpp  wl_standup.cpp  wl_template.cpp  wl_zero_torque.cpp
include/limxsdk/: pointfoot.h  wheel_legged.h
lib/win/: limx_robot_sdk.lib
python3/: README.md
python3/aarch64/limxsdk/datatypes/: __init__.py
python3/aarch64/limxsdk/robot/: RobotType.py
python3/amd64/: example.py
python3/amd64/limxsdk/robot/: Robot.py
python3/win/limxsdk/datatypes/: RobotState.py
python3/win/limxsdk/robot/: _robot.lib
